BuildHughes/translation-tool/inputs/source_meta/objects/Common_VideoOpt_Configurations__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HD_Disabled_Template__c</fullName>
        <label>HD Disabled Template</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_Permanent_Template__c</fullName>
        <label>HD Permanent Template</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HD_Temporary_Template__c</fullName>
        <label>HD Temporary Template</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snooze_Hours__c</fullName>
        <label>Snooze Hours</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Common VideoOpt Configurations</label>
</CustomObject>